# optimizateya

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  alembic.ini  docker-compose.yml  optimizateya-blueprint.md  pyproject.toml  railway.toml
ai/: budget.py  client.py  embeddings.py  nlu.py  prompts.py  tools.py  transcribe.py  vision.py
alembic/: env.py
alembic/versions/: 0001_initial_schema.py
api/: dependencies.py  main.py
api/routers/: health.py  oauth.py  telegram.py
bot/: commands.py  dispatcher.py  keyboards.py  processing.py  states.py
bot/handlers/: callbacks.py  document.py  gamification.py  photo.py  privacy.py  start.py  text.py  voice.py
bot/middleware/: i18n.py  rate_limit.py  user.py
core/: config.py  crypto.py  database.py  errors.py  events.py  logging.py  redis.py  storage.py  storage_cloudinary.py  storage_r2.py
core/models/: __init__.py  achievement.py  base.py  calendar.py  feature_flag.py  gamification.py  list.py  memory.py  outbox.py  reminder.py  user.py
domain/: briefing.py  calendar.py  calendar_providers.py  dates.py  dispatcher.py  lists.py  memory.py  privacy.py  reminders.py
gamification/: achievements.py  catalog.py  engine.py  leaderboard.py  points.py  streaks.py
scheduler/: engine.py  manager.py
scheduler/jobs/: calendar_reconcile.py  daily_briefing.py  leaderboard_snapshot.py  reminder_fire.py  retention_gc.py
tests/: conftest.py  test_core.py  test_scheduler.py  test_storage.py
tests/ai/: test_nlu.py
tests/api/: test_endpoints.py
tests/domain/: test_dates.py  test_lists.py  test_memory.py  test_privacy.py  test_reminders.py
tests/flows/: test_voice_to_reminder.py
tests/gamification/: test_engine.py  test_streaks.py
worker/: main.py  queue.py
worker/tasks/: calendar_sync.py  common.py  index_memory.py  ocr.py  outbox_flush.py  transcribe.py
