[project]
name = "optimizateya"
version = "0.1.0"
description = "Optimizate Ya — asistente conversacional 'segunda memoria' en Telegram"
requires-python = ">=3.12,<3.13"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "aiogram>=3.15",
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30",
    "alembic>=1.14",
    "pgvector>=0.3.6",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "redis>=5.2",
    "arq>=0.26",
    "apscheduler>=3.10,<4",
    "psycopg2-binary>=2.9",
    "openai>=1.55",
    "groq>=0.13",
    "pytesseract>=0.3.13",
    "pillow>=11.0",
    "aioboto3>=13.2",
    "cryptography>=43",
    "pypdf>=5.1",
    "structlog>=24.4",
    "sentry-sdk>=2.19",
    "prometheus-client>=0.21",
    "python-dateutil>=2.9",
    "httpx>=0.27",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "ruff>=0.8",
    "mypy>=1.13",
    "fakeredis>=2.26",
    "aiosqlite>=0.20",
]

[tool.uv]
package = false

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "ASYNC"]
ignore = ["B008"]  # FastAPI Depends() en defaults

[tool.ruff.lint.per-file-ignores]
"alembic/versions/*" = ["E501"]  # DDL: legibilidad columna-por-línea

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
filterwarnings = ["ignore::DeprecationWarning"]

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
check_untyped_defs = true

# aiogram: los filtros (F.voice, F.photo, callbacks) ya garantizan presencia;
# narrowear cada Optional sería puro boilerplate en handlers.
[[tool.mypy.overrides]]
module = "bot.handlers.*"
disable_error_code = ["union-attr", "index"]

[[tool.mypy.overrides]]
module = "tests.*"
disable_error_code = ["arg-type", "union-attr", "index"]
